cursive-bootstrap/tests/ui/E-CON/E-CON-0102.cursive
// RUN: compile-fail
// DIAG: E-CON-0102
// SPEC: 8.9
// DESC: Domain expression not ExecutionDomain

procedure bad_domain() -> () {
    let x: i32 = 42
    parallel on x {  //~ ERROR E-CON-0102: domain not ExecutionDomain
        spawn { return () }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
